--- a/css/style.css
+++ b/css/style.css
@@ -10,28 +10,14 @@
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
 }
 
-.minibox{
-  background-color: #252c30;
-  margin: 0px;
-  border-radius: 0px;
-  width: 140px;
-}
-
-.minibox2{
-  background-color: #252c30;
-  margin: 0px;
-  border-radius: 0px;
-  width: 140px;
-}
-
 .b-box1{
-  background-color: #252c30;
+  background-color: #0b0b0b;
   border-radius: 0px;
   text-align: center;
 }
 
 .b-box2{
-  background-color: #252c30;
+  background-color: #0d2f1f;
   border-radius: 0px;
   text-align: center;
 }
